@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.381 2005/11/17 20:39:53 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.382 2005/11/17 20:56:15 rocket Exp $
+
+  17 Nov 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Attempt to fix bug #111752, due to mount_safety_check calling a lock object
+  that doesnt exist yet
 
   17 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/kmerge.sh:
   Keep unnecessary programs from installing into kerncache
